Database created with FluentMigrator

--- a/KalamazoDefteri/Web.config
+++ b/KalamazoDefteri/Web.config
@@ -10,6 +10,12 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  
+  <connectionStrings>
+    <clear />
+    <add name="DB" connectionString="Server=127.0.0.1;Database=kalamazodefteri;user id=root;pwd=root" />
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
