--- a/KalamazoDefteri/packages.config
+++ b/KalamazoDefteri/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="4.3.1" targetFramework="net461" />
+  <package id="FluentMigrator" version="1.6.2" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="JSAndCSSBundling" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
