--- a/KalamazoDefteri/Web.config
+++ b/KalamazoDefteri/Web.config
@@ -15,6 +15,18 @@
     <clear />
     <add name="DB" connectionString="Server=127.0.0.1;Database=kalamazodefteri;user id=root;pwd=root" />
   </connectionStrings>
+
+  <configSections>
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+  </configSections>
+
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="dialect">NHibernate.Dialect.MySQLDialect</property>
+      <property name="connection.driver_class">NHibernate.Driver.MySqlDataDriver</property>
+      <property name="connection.connection_string_name">DB</property>
+    </session-factory>
+  </hibernate-configuration>
   
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -37,6 +49,10 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
