--- a/KalamazoDefteri/packages.config
+++ b/KalamazoDefteri/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="bootstrap" version="4.3.1" targetFramework="net461" />
   <package id="FluentMigrator" version="1.6.2" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="JSAndCSSBundling" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
@@ -14,7 +16,10 @@
   <package id="Microsoft.Web.Optimization" version="0.1" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net461" />
+  <package id="NHibernate" version="5.2.5" targetFramework="net461" />
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
+  <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
+  <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
   <package id="WebActivator" version="1.5" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
