--- a/KalamazoDefteri/Web.config
+++ b/KalamazoDefteri/Web.config
@@ -7,7 +7,6 @@
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
   </configSections>
-
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,21 +17,17 @@
   
   <connectionStrings>
     <clear />
-    <add name="DB" connectionString="Server=127.0.0.1;Database=kalamazodefteri;user id=root;pwd=root" />
+    <add name="myDB" connectionString="Server=127.0.0.1;Database=kalamazodefteri;uid=root;pwd=root" />
   </connectionStrings>
   
     <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.MySQLDialect</property>
       <property name="connection.driver_class">NHibernate.Driver.MySqlDataDriver</property>
-      <property name="connection.connection_string_name">DB</property>
+      <property name="connection.connection_string_name">myDB</property>
     </session-factory>
   </hibernate-configuration>
     
-
-
-
-  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
