--- a/KalamazoDefteri/Web.config
+++ b/KalamazoDefteri/Web.config
@@ -7,6 +7,8 @@
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
   </configSections>
+
+
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -32,8 +34,14 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <authentication mode="Forms">
-      <forms loginUrl="~/login"/>
+      <forms loginUrl="~/login" />
     </authentication>
+    <roleManager enabled="true" defaultProvider="RP">
+      <providers>
+        <clear />
+        <add name="RP" type="KalamazoDefteri.Infrastructures.RoleProvider" />
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
