--- a/KalamazoDefteri/packages.config
+++ b/KalamazoDefteri/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
+  <package id="BCrypt.Net" version="0.1.0" targetFramework="net461" />
   <package id="bootstrap" version="4.3.1" targetFramework="net461" />
   <package id="FluentMigrator" version="1.6.2" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
