--- a/KalamazoDefteri/KalamazoDefteri.csproj
+++ b/KalamazoDefteri/KalamazoDefteri.csproj
@@ -135,12 +135,16 @@
     <Content Include="Content\css\bootstrap-reboot.min.css" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\dataTables.bootstrap4.min.css" />
     <Content Include="Content\css\default-css.css" />
     <Content Include="Content\css\export.css" />
     <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\css\jquery.dataTables.css" />
     <Content Include="Content\css\metisMenu.css" />
     <Content Include="Content\css\owl.carousel.min.css" />
+    <Content Include="Content\css\responsive.bootstrap.min.css" />
     <Content Include="Content\css\responsive.css" />
+    <Content Include="Content\css\responsive.jqueryui.min.css" />
     <Content Include="Content\css\slicknav.min.css" />
     <Content Include="Content\css\styles.css" />
     <Content Include="Content\css\themify-icons.css" />
@@ -190,6 +194,10 @@
     <Content Include="Content\js\bar-chart.js" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\Chart.min.js" />
+    <Content Include="Content\js\datatable.js" />
+    <Content Include="Content\js\dataTables-responsive.min.js" />
+    <Content Include="Content\js\dataTables.bootstrap4.min.js" />
+    <Content Include="Content\js\dataTables.min.js" />
     <Content Include="Content\js\export-data.js" />
     <Content Include="Content\js\export.min.js" />
     <Content Include="Content\js\exporting.js" />
@@ -203,6 +211,7 @@
     <Content Include="Content\js\pie-chart.js" />
     <Content Include="Content\js\plugins.js" />
     <Content Include="Content\js\popper.min.js" />
+    <Content Include="Content\js\responsive.bootstrap.min.js" />
     <Content Include="Content\js\scripts.js" />
     <Content Include="Content\js\serial.js" />
     <Content Include="Content\js\vendor\jquery-2.2.4.min.js" />
@@ -230,6 +239,26 @@
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Users\EditUser.cshtml" />
+    <Content Include="Content\js\inputmask\bindings\inputmask.binding.js" />
+    <Content Include="Content\js\inputmask\dependencyLibs\inputmask.dependencyLib.jqlite.js" />
+    <Content Include="Content\js\inputmask\dependencyLibs\inputmask.dependencyLib.jquery.js" />
+    <Content Include="Content\js\inputmask\dependencyLibs\inputmask.dependencyLib.js" />
+    <Content Include="Content\js\inputmask\global\window.js" />
+    <Content Include="Content\js\inputmask\inputmask.date.extensions.js" />
+    <Content Include="Content\js\inputmask\inputmask.extensions.js" />
+    <Content Include="Content\js\inputmask\inputmask.js" />
+    <Content Include="Content\js\inputmask\inputmask.numeric.extensions.js" />
+    <Content Include="Content\js\inputmask\jquery.inputmask.js" />
+    <Content Include="Content\js\inputmask\min\bindings\inputmask.binding.min.js" />
+    <Content Include="Content\js\inputmask\min\dependencyLibs\inputmask.dependencyLib.jqlite.min.js" />
+    <Content Include="Content\js\inputmask\min\dependencyLibs\inputmask.dependencyLib.jquery.min.js" />
+    <Content Include="Content\js\inputmask\min\dependencyLibs\inputmask.dependencyLib.min.js" />
+    <Content Include="Content\js\inputmask\min\global\window.min.js" />
+    <Content Include="Content\js\inputmask\min\inputmask.date.extensions.min.js" />
+    <Content Include="Content\js\inputmask\min\inputmask.extensions.min.js" />
+    <Content Include="Content\js\inputmask\min\inputmask.min.js" />
+    <Content Include="Content\js\inputmask\min\inputmask.numeric.extensions.min.js" />
+    <Content Include="Content\js\inputmask\min\jquery.inputmask.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -245,11 +274,13 @@
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\FirmalarController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MonetaryController.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructures\Auth.cs" />
+    <Compile Include="Infrastructures\PagedData.cs" />
     <Compile Include="Infrastructures\RoleProvider.cs" />
     <Compile Include="Infrastructures\TransactionFilter.cs" />
     <Compile Include="Migrations\_001_Users_and_Roles.cs" />
@@ -261,6 +292,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Auth.cs" />
     <Compile Include="ViewModels\Companies.cs" />
+    <Compile Include="ViewModels\CurrentUser.cs" />
+    <Compile Include="ViewModels\Monetary.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -276,9 +309,11 @@
     <Content Include="Views\Auth\Login.cshtml" />
     <Content Include="Views\Auth\Register.cshtml" />
     <Content Include="Views\Firmalar\Index.cshtml" />
-    <Content Include="Views\Firmalar\Outgoing.cshtml" />
-    <Content Include="Views\Firmalar\Income.cshtml" />
     <Content Include="Views\Firmalar\CompanyView.cshtml" />
+    <Content Include="Views\Monetary\IncomeIndex.cshtml" />
+    <Content Include="Views\Monetary\OutgoingIndex.cshtml" />
+    <Content Include="Views\Firmalar\NewCompany.cshtml" />
+    <Content Include="Views\Monetary\NewIncome.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
