--- a/KalamazoDefteri/packages.config
+++ b/KalamazoDefteri/packages.config
@@ -7,6 +7,7 @@
   <package id="FluentMigrator" version="1.6.2" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
   <package id="jQuery" version="3.4.1" targetFramework="net461" />
+  <package id="jQuery.InputMask" version="4.0.6" targetFramework="net461" />
   <package id="JSAndCSSBundling" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
