--- a/KalamazoDefteri/packages.config
+++ b/KalamazoDefteri/packages.config
@@ -8,6 +8,7 @@
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
   <package id="jQuery" version="3.4.1" targetFramework="net461" />
   <package id="jQuery.InputMask" version="4.0.6" targetFramework="net461" />
+  <package id="jQuery-datetimepicker" version="2.4.5" targetFramework="net461" />
   <package id="JSAndCSSBundling" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
@@ -22,6 +23,7 @@
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net461" />
   <package id="WebActivator" version="1.5" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
